infra/k8s/mcpserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcpserver-ingress
  namespace: mcp-apis
spec:
  ingressClassName: nginx
  rules:
    - host: mcpserver.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcpserver
                port:
                  number: 4000
